Z-index fix.

--- a/assets/furllery.css
+++ b/assets/furllery.css
@@ -29,6 +29,7 @@
 
   &:hover .df-furllery-overlay {
     opacity: 1;
+    z-index: 1;
   }
 }
 
